--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,6 @@
 html {
   height: -webkit-fill-available;
   height: var(--app-height);
-  overscroll-behavior-y: none;
 }
 
 html.pwa-mode {
@@ -22,11 +21,11 @@ body {
   height: 100%;
   min-height: 100vh;
   min-height: -webkit-fill-available;
-  overscroll-behavior-y: none;
   -webkit-overflow-scrolling: touch;
   position: fixed;
   width: 100%;
   overflow-y: scroll;
+  background-color: #000000;
 }
 
 @layer base {
@@ -145,6 +144,7 @@ body {
     @apply fixed top-0 left-0 right-0 z-50 bg-black text-white;
     height: calc(4rem + env(safe-area-inset-top));
     padding-top: env(safe-area-inset-top);
+    background-color: #000000;
   }
   
   .pwa-content {
