--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,9 +22,8 @@ body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
   -webkit-overflow-scrolling: touch;
-  position: fixed;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: #000000;
 }
 
@@ -154,6 +153,7 @@ body {
     height: 100%;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+    overscroll-behavior-y: contain;
   }
 }
 
